fixed stretching and centered image

--- a/style.css
+++ b/style.css
@@ -3,12 +3,18 @@
     margin: 0%;
 }
 
+html, body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 .top {
     background-color: #222630;
 }
 
 .header {
-    display: flexbox;
     background-color: #222630;
 }
 
@@ -59,17 +65,26 @@
 }
 
 .middle {
-    padding: 5%;
+    display: flex;
     background-image: url(./pictures/tcWebBackground3.jpg);
+    margin-top: 0%;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    padding-top: 5%;
 }
 
 .image {
     display: flex;
-    padding: 20%;
 }
 
 .poster {
-    width: 100%;
-    height: auto;
+    display: flex;
+    height: 30%;
+   
     
+}
+
+.footer {
+    background-color: black;
 }
